plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.mydiet'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Database
	runtimeOnly 'com.h2database:h2'
	// runtimeOnly 'com.mysql:mysql-connector-j' // Note: artifact ID changed from mysql-connector-java

	// Lombok (Versions managed by Spring Boot)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// OpenAPI / Swagger
	// Springfox is abandoned and incompatible with Spring Boot 3. Replaced with Springdoc.
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// Utilities
	implementation 'com.google.guava:guava:33.3.1-jre'

	// Logging
	// Removed log4j 1.2.17 (End-of-Life and highly insecure).
	// Spring Boot uses Logback by default. If you strictly need Log4j 2, uncomment below:
	// implementation 'org.apache.logging.log4j:log4j-api'
	// implementation 'org.apache.logging.log4j:log4j-core'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core'
	testRuntimeOnly 'com.h2database:h2'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}